--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,7 +1,5 @@
-<app-top-bar><p>
-    <app-click-me></app-click-me>
-  </p></app-top-bar>
-  
+<app-top-bar></app-top-bar>
+
 <router-outlet></router-outlet>
 
 
