--- a/src/app/top-bar/top-bar.component.html
+++ b/src/app/top-bar/top-bar.component.html
@@ -7,9 +7,10 @@
   <li> <a [routerLink]="['/categories']">Menu</a></li>
   <li> <a [routerLink]="['/products']">Favorites</a></li>
   <li> <a [routerLink]="['/about']">About</a></li>
-  <li> <a [routerLink]="['/order']">Make an order</a></li>
-  <li> <a [routerLink]="['/products']">PhotoGallery</a></li>
- 
+  <li> <a [routerLink]="['/parent']">Zhanar</a></li>
+  <li><a [routerLink]="['/cart1']" class="fancy-button">
+    <i class="material-icons">shopping_cart</i>Checkout
+  </a></li>
 </ul> 
   <a [routerLink]="['/login']">
  Log in</a>
