--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,4 +1,3 @@
-
 <html>
 
 <meta charset="UTF-8">
@@ -33,7 +32,7 @@ height:100%;
     <div class="w3-display-left w3-padding-large">
       <h1 class="w3-text-white">Zentro</h1>
       <h1 class="w3-jumbo w3-text-white w3-hide-small"><b>Order your table</b></h1>
-      <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'"><a [routerLink]="['/order']">Order</a></button></h6>
+      <h6><button class="w3-button w3-white w3-padding-large w3-large w3-opacity w3-hover-opacity-off" onclick="document.getElementById('subscribe').style.display='block'"><a [routerLink]="['/cart1']">Order</a></button></h6>
     </div>
   </header>
 
