--- a/src/app/order/order.component.html
+++ b/src/app/order/order.component.html
@@ -1,6 +1,6 @@
 <p>order works!</p>
 
-<h2>{{order.name | uppercase}} Details</h2>
+<h2>{{order.name | uppercase}} </h2>
 <div><span>id: </span>{{order.id}}</div>
 <div>
   <label>name:
