--- a/src/app/product-list/product-list.component.html
+++ b/src/app/product-list/product-list.component.html
@@ -1,4 +1,4 @@
-
+<h2>Products</h2>
 
 <div *ngFor="let product of products; index as productId">
   <h3>
@@ -16,8 +16,6 @@
   <p id="rating">
     Rating: {{product.rating}}
   </p>
-  <button (click)="share(product)">
-    Order </button>
   <app-product-alerts
   [product]="product"
   (notify)="onNotify()">
